--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddPlantActivity"></activity>
+        <activity android:name=".MyPlantsActivity"></activity>
         <activity android:name=".PhotoActivity"></activity>
     </application>
 
