--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".PhotoActivity" />
         <activity android:name=".ViewPlantActivity"></activity>
         <activity android:name=".UserSettingsActivity"></activity>
+        <activity android:name=".GifActivity"></activity>
     </application>
 
 </manifest>
