--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -28,4 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:gridlayout-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.google.firebase:firebase-database:10.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
