--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.code.gson:gson:2.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
